--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-Hello World
+<html lang="en">
+<head>
+  <title>Mihai Buica</title>
+  <link rel="stylesheet" href="index.css" />
+  <meta name="viewport" content="width=device-width, intial-scale=1.0">
+  <link rel="icon" href="favicon.ico">
+   <!-- Font Awesome CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+  <main>
+    <img class="my-photo" src="./profile-pic-slack-centrated.jpg" />
+    <div class="column centered">
+	<h1>Mihai Buica</h1>
+      <h2>Software engineer</h2>
+		<div id="text_col">
+                <div>
+                  <a class="btn btn-default" href="mailto:mihaibuica38@gmail[dot]com"><i class="fa fa-envelope fa-2x"></i></a>
+                   <a class="btn btn-default" href="https://ro.linkedin.com/in/mihai-buica"><i class="fa fa-linkedin fa-2x"></i></a>
+                   <a target="_blank" class="btn btn-default" href="https://github.com/MihaiBuica"><i class="fa fa-github fa-2x"></i></a>
+				</div>
+		</div>
+	</div>
+  </main>
+</body>
