--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="column centered">
 	<h1>Mihai Buica</h1>
     <h2>Software engineer</h2>
+	<h4>Curious computer science student, passionate about technology.</h4>
 		<div id="text_col">
                 <div>
                   <a class="btn btn-default" href="mailto:mihaibuica38@gmail[dot]com"><i class="fa fa-envelope fa-2x"></i></a>
